--- a/src/css/_BRcustom.scss
+++ b/src/css/_BRcustom.scss
@@ -1,6 +1,6 @@
 /* SLAM Custom Style for Translation/Transcription Container */
 .btnWrap {
-  background-color: #eee;
+  background-color: #eeeeeebd;
   padding: .5rem;
   cursor: pointer;
   margin-bottom: .5rem;
@@ -14,6 +14,12 @@
 
   p {
     margin-bottom: 1rem;
+    font-size: 15px;
+    line-height: 1.25;
+  }
+
+  h5 {
+    text-transform: none;
   }
 
   @media (min-width: 576px) {
